fix(analytics-field): fix missing margin in preview

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -37,3 +37,7 @@ body {
 .parent-container > section {
   margin-left: 2ch;
 }
+
+.password-field {
+  margin-bottom: 10px !important;
+}
